--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,5 +1,5 @@
 <div class="main">
-  <div class=" col-5">
+  <div class=" col-5 ">
     <div class="">
       <h2 class="formTitle d-flex justify-content-center">Registro</h2>
 
@@ -19,7 +19,7 @@
         <label for="exampleInputEmail1">Avatar URL:</label>
         <input type="text" class="form-control" name="avatar" required><br>
         <input type="submit" class="btn btn-info" value="Registrarse"> 
-        <input type="submit" class="btn btn-info" onclick="location.href='http://localhost:8080/login';" value="Ir a ingresar"> 
+        <input type="submit" class="btn btn-info" onclick="location.href='login';" value="Ir a ingresar"> 
 
       </form>
             
