--- a/src/views/registerfail.handlebars
+++ b/src/views/registerfail.handlebars
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column justify-content-center align-items-center fail">
   <h1 class="">USER ERROR SIGNUP</h1>
-  <button class="btn btn-info"type="submit"id="fail" onclick="location.href='http://localhost:8080/';">Volver</button>
+  <button class="btn btn-info"type="submit"id="fail" onclick="location.href='/';">Volver</button>
 </div> 
 
 
