--- a/src/views/welcome.handlebars
+++ b/src/views/welcome.handlebars
@@ -1,6 +1,6 @@
 <div class="d-flex flex-row justify-content-around align-items-center bienvenido">
   <h1>¡Hola  {{user.name}} !</h1>
-  <input type="submit" class="btn btn-warning" onclick="location.href='http://localhost:8080/logout';" value="Cerrar Sesión"> 
+  <input type="submit" class="btn btn-warning" onclick="location.href='logout';" value="Cerrar Sesión"> 
 </div> 
 
 {{> chat}}
