--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -19,7 +19,7 @@
         <label for="exampleInputEmail1">Avatar URL:</label>
         <input type="text" class="form-control" name="avatar" required><br>
         <input type="submit" class="btn btn-info" value="Registrarse"> 
-        <input type="submit" class="btn btn-info" onclick="location.href='login';" value="Ir a ingresar"> 
+        <input type="submit" class="btn btn-info" onclick="location.href='/login';" value="Ir a ingresar"> 
 
       </form>
             
