--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -8,7 +8,7 @@
         <label for="exampleInputEmail1">Contraseña:</label>
         <input type="password" class="form-control" name="password"required><br>   
         <input type="submit" class="btn btn-info"  value="Ingresar"> 
-        <input type="submit" class="btn btn-info" onclick="location.href='';" value="Ir a resgistrase"> 
+        <input type="submit" class="btn btn-info" onclick="location.href='/';" value="Ir a resgistrase"> 
          
         
       </form>
