--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -7,8 +7,8 @@
         <input type="text" class="form-control"  name="email"required><br>
         <label for="exampleInputEmail1">Contraseña:</label>
         <input type="password" class="form-control" name="password"required><br>   
-        <input type="submit" class="btn btn-info"  value="Ingresar"> 
-        <input type="submit" class="btn btn-info" onclick=location.href="https://loggeranalisisdeperformance-production.up.railway.app/" value="Ir a resgistrase"> 
+        <input type="submit" class="btn btn-info"  id="ingresar" value="Ingresar"> 
+        <input type="submit" class="btn btn-info" id="registre" value="Ir a resgistrase"> 
          
         
       </form>
@@ -28,4 +28,4 @@
 
 
 
-
+<script src="./scripts/login.js"></script>
