--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -7,8 +7,8 @@
         <input type="text" class="form-control"  name="email"required><br>
         <label for="exampleInputEmail1">Contraseña:</label>
         <input type="password" class="form-control" name="password"required><br>   
-        <input type="submit" class="btn btn-info"  id="ingresar" value="Ingresar"> 
-        <input type="submit" class="btn btn-info" id="registre" value="Ir a resgistrase"> 
+        <button class="btn btn-info"  id="ingresar">Ingresar</button>
+        <button class="btn btn-info" id="registre">Ir a registrarse</button> 
          
         
       </form>
