--- a/src/views/welcome.handlebars
+++ b/src/views/welcome.handlebars
@@ -3,4 +3,4 @@
   <input type="submit" class="btn btn-warning" onclick="location.href='logout';" value="Cerrar Sesión"> 
 </div> 
 
-{{> chat}}
+{{> addProduct}}
