--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="styles/style.css"> 
+    <link rel="stylesheet" href="./styles/styles.css">
+    
 
     <title>{{title}}</title>
 </head>
@@ -15,5 +16,10 @@
 
         {{{body}}}
 
+
+
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     </body>
+
 </html>
