--- a/src/views/partials/productList.handlebars
+++ b/src/views/partials/productList.handlebars
@@ -40,6 +40,8 @@
               
             </div>
 
+            
+
             <!-- start Total -->
             <div class="row">
               <div class="col-12 d-flex justify-content-between aling-items-between">
@@ -47,11 +49,24 @@
                   <p class="mb-2 p-2">total</p>
                   <p class="ml-4 p-2 shoppingCartTotal"> $0</p>
                 </div>
-                <button class="btn btn-success ml-auto comprarButton" data-target="#comprar Modal">comprar</button>
+                <button class="btn btn-success ml-auto comprarButton">comprar</button>
               </div>
             </div>
           </div>
         </section>
+        
+        <div class="container-modal ">
+          
+          <div class="content-modal">
+            <h2>ingrese emails</h2>
+            <input type="email" id="email-element" class="form-control" placeholder="email">
+            
+            <button type="submit" id="submit" class="btn btn-primary">enviar</button>
+          </div>
+          <button class="btn-modal btn-danger">x</button>
+          
+        </div>
+        
         
 
 
