--- a/src/public/styles/styles.css
+++ b/src/public/styles/styles.css
@@ -389,3 +389,36 @@ h4 {
   width: 100%;
   height: 10rem
 }
+
+/* boton modal */
+
+#btn-modal{
+  display: none;
+}
+
+.container-modal{
+  width: 100%;
+  height: 50vh;
+  position:fixed;
+  bottom: 0; left: 0;
+  background-color: none;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  z-index: 100;
+  opacity: 0;
+  pointer-events: none;
+
+}
+
+.modal--show{
+  opacity: 1;
+  pointer-events: unset;
+}
+.content-modal{
+  width: 100%;
+  max-width: 400px;
+  padding: 20px;
+  background-color: rgb(233, 186, 240);
+  border-radius:4px;
+}
