--- a/src/views/partials/productList.handlebars
+++ b/src/views/partials/productList.handlebars
@@ -58,7 +58,7 @@
         <div class="container-modal ">
           
           <div class="content-modal">
-            <h2>ingrese emails</h2>
+            <h2>ingrese email</h2>
             <input type="email" id="email-element" class="form-control" placeholder="email">
             
             <button type="submit" id="submit" class="btn btn-primary">enviar</button>
@@ -73,3 +73,4 @@
 
  <script src="./scripts/store.js"></script>
  <script src="./scripts/main.js"></script>
+ <script src="./scripts/order.js"></script>
